[package]
name = "wrapnum"
version = "0.3.2"
edition = "2021"
description = "Ever wanted to make easy arbitrary number wraparounds? Now you can."
license = "GPL-3.0-only"
repository = "https://github.com/Elsie19/wrapnum"

[dependencies]
num-traits = "0.2.19"

[package.metadata.docs.rs]
cargo-args = ["-Zunstable-options", "-Zrustdoc-scrape-examples"]
